# cnr_ros_regulators

cnr_fake_regulator/: CMakeLists.txt  package.xml  plugin.xml
cnr_fake_regulator/include/cnr_fake_regulator/: cnr_fake_regulator.h
cnr_fake_regulator/include/cnr_fake_regulator/internal/: cnr_fake_regulator_impl.h
cnr_fake_regulator/src/cnr_fake_regulator/: cnr_fake_regulator.cpp
cnr_impedance_regulator/: CMakeLists.txt  package.xml
cnr_impedance_regulator/include/cnr_impedance_regulator/: cnr_impedance_regulator.h  cnr_impedance_regulator_inputs.h  cnr_impedance_regulator_options.h  cnr_impedance_regulator_outputs.h  cnr_impedance_regulator_params.h  cnr_impedance_regulator_state.h
cnr_impedance_regulator/include/cnr_impedance_regulator/internal/: cnr_impedance_regulator_impl.h
cnr_impedance_regulator/src/cnr_impedance_regulator/: cnr_impedance_regulator.cpp
cnr_regulator_interface/: CMakeLists.txt  package.xml
cnr_regulator_interface/include/cnr_regulator_interface/: cnr_regulator_base.h  cnr_regulator_control_commands.h  cnr_regulator_feedback.h  cnr_regulator_inputs.h  cnr_regulator_interface.h  cnr_regulator_options.h  cnr_regulator_outputs.h  cnr_regulator_params.h  cnr_regulator_references.h  cnr_regulator_state.h
cnr_regulator_interface/include/cnr_regulator_interface/internal/: cnr_regulator_base.h  cnr_regulator_interface_impl.h
cnr_regulator_interface/src/cnr_regulator_interface/: cnr_regulator_base.cpp
cnr_regulator_interface/test/: test.cpp
