<?xml version="1.0"?>
<package format="2">
  <name>cnr_regulator_interface</name>
  <version>0.0.0</version>
  <description>The cnr_regulator_interface package</description>

  <maintainer email="tesla@todo.todo">tesla</maintainer>


  <license>BSD</license>


  <!-- <url type="website">http://wiki.ros.org/cnr_regulator_interface</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>cnr_logger</build_depend>
  <build_export_depend>cnr_logger</build_export_depend>
  <exec_depend>cnr_logger</exec_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <build_depend>pluginlib</build_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <exec_depend>pluginlib</exec_depend>

  <build_depend>trajectory_msgs</build_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <build_depend>cnr_controller_interface</build_depend>
  <build_export_depend>cnr_controller_interface</build_export_depend>
  <exec_depend>cnr_controller_interface</exec_depend>

  <build_depend>cnr_interpolator_interface</build_depend>
  <build_export_depend>cnr_interpolator_interface</build_export_depend>
  <exec_depend>cnr_interpolator_interface</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
